# AIRP-Gateway

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: AGENTBUS-ADAPTER.md  CUSTOMIZATION.md  DESIGN.md  MCP-SERVER-REQUIREMENTS.md  ROADMAP.md
examples/: agentbus_sse.rs  custom_frontend.rs  mock_mcp_stdio.rs
src/: config.rs  error.rs  lib.rs  telemetry.rs
src/agentbus/: bus.rs  config.rs  envelope.rs  handlers.rs  mod.rs
src/bridge/: mod.rs
src/mcp/: client.rs  mod.rs  pool.rs  types.rs
src/mcp/transport/: http.rs  mod.rs  stdio.rs
src/server/: handlers.rs  middleware.rs  mod.rs
tests/: agentbus_adapter.rs  e2e_http.rs  e2e_stdio.rs  integration.rs
