[package]
name = "airp-gateway"
version = "0.1.0"
edition = "2021"
authors = ["GhostXia"]
license = "MIT OR Apache-2.0"
description = "Generic high-performance protocol bridge: frontend HTTP/SSE <-> MCP servers. Part of the AIRP ecosystem."
repository = "https://github.com/GhostXia/AIRP-Gateway"

# Library-only: the gateway is embedded directly into AIRP-Core (or any other
# project) as a crate. No standalone binary. Host owns process startup and
# calls `Gateway::build(cfg).run()`.
[lib]
name = "airp_gateway"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "sync", "io-util", "time", "fs", "process", "signal"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
async-trait = "0.1"
futures-util = "0.3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
async-trait = "0.1"
